// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can create 1`] = `
.c0 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 240px;
}

.c0:hover,
.c0:focus {
  background: #B29DFF;
}

.c0:active {
  background: #C5B6FF;
}

.c0:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

<button
  class="c0"
  kind="primary"
  title=""
  width="240px"
>
  Add Database
</button>
`;

exports[`leaf cluster 1`] = `
.c0 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 240px;
}

.c0:hover,
.c0:focus {
  background: #B29DFF;
}

.c0:active {
  background: #C5B6FF;
}

.c0:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

<button
  class="c0"
  disabled=""
  kind="primary"
  title="Adding a database to a leaf cluster is not supported"
  width="240px"
>
  Add Database
</button>
`;

exports[`read only 1`] = `
.c0 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 240px;
}

.c0:hover,
.c0:focus {
  background: #B29DFF;
}

.c0:active {
  background: #C5B6FF;
}

.c0:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

<button
  class="c0"
  disabled=""
  kind="primary"
  title="You do not have access to add a database"
  width="240px"
>
  Add Database
</button>
`;
